Assignment2/assignment2/upload/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "<INVALID>", "'='", "'>'", "'>='", "'<'", "'<='", "<INVALID>", 
                     "<INVALID>", "'<>'", "<INVALID>", "','", "'..'", "':'", 
                     "';'", "'['", "']'", "'('", "')'", "'{'", "'}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CONTINUE", "ELSE", 
                      "FOR", "REAL", "IF", "INTEGER", "RETURN", "VOIDTYPE", 
                      "DO", "WHILE", "STRING", "WITH", "TO", "DOWNTO", "THEN", 
                      "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", 
                      "OF", "ID", "TRADBLOCK", "BLOCK", "LINE", "ASSIOP", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "DIVINOP", "MODOP", 
                      "EQUOP", "GTOP", "GTEOP", "LTOP", "LTEOP", "ANDOP", 
                      "OROP", "NEOP", "NOTOP", "COMMA", "DOUDOT", "COLON", 
                      "SEMI", "LSB", "RSB", "LB", "RB", "LP", "RP", "INTLIT", 
                      "REALLIT", "BOOLLIT", "WS", "ERROR_CHAR", "STRINGLIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_vardec = 1
    RULE_varlist = 2
    RULE_vartype = 3
    RULE_paramarr = 4
    RULE_vartypebasic = 5
    RULE_funcdec = 6
    RULE_paramlist = 7
    RULE_paramsingle = 8
    RULE_returntype = 9
    RULE_stmt = 10
    RULE_stmtsingle = 11
    RULE_matchstmt = 12
    RULE_ortherstmt = 13
    RULE_unmatchstmt = 14
    RULE_assignstmt = 15
    RULE_assignlist = 16
    RULE_arrayvar = 17
    RULE_indexexp = 18
    RULE_ifstmt = 19
    RULE_ifbody = 20
    RULE_whilestmt = 21
    RULE_whilebody = 22
    RULE_forstmt = 23
    RULE_forbody = 24
    RULE_breakstmt = 25
    RULE_continuestmt = 26
    RULE_compoundstmt = 27
    RULE_returnstmt = 28
    RULE_returnbody = 29
    RULE_withstmt = 30
    RULE_funcall = 31
    RULE_calllist = 32
    RULE_procdec = 33
    RULE_expstmt = 34
    RULE_exp = 35
    RULE_expr = 36
    RULE_exp0 = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_literals = 44

    ruleNames =  [ "program", "vardec", "varlist", "vartype", "paramarr", 
                   "vartypebasic", "funcdec", "paramlist", "paramsingle", 
                   "returntype", "stmt", "stmtsingle", "matchstmt", "ortherstmt", 
                   "unmatchstmt", "assignstmt", "assignlist", "arrayvar", 
                   "indexexp", "ifstmt", "ifbody", "whilestmt", "whilebody", 
                   "forstmt", "forbody", "breakstmt", "continuestmt", "compoundstmt", 
                   "returnstmt", "returnbody", "withstmt", "funcall", "calllist", 
                   "procdec", "expstmt", "exp", "expr", "exp0", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "literals" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CONTINUE=3
    ELSE=4
    FOR=5
    REAL=6
    IF=7
    INTEGER=8
    RETURN=9
    VOIDTYPE=10
    DO=11
    WHILE=12
    STRING=13
    WITH=14
    TO=15
    DOWNTO=16
    THEN=17
    BEGIN=18
    END=19
    FUNCTION=20
    PROCEDURE=21
    VAR=22
    ARRAY=23
    OF=24
    ID=25
    TRADBLOCK=26
    BLOCK=27
    LINE=28
    ASSIOP=29
    ADDOP=30
    SUBOP=31
    MULOP=32
    DIVOP=33
    DIVINOP=34
    MODOP=35
    EQUOP=36
    GTOP=37
    GTEOP=38
    LTOP=39
    LTEOP=40
    ANDOP=41
    OROP=42
    NEOP=43
    NOTOP=44
    COMMA=45
    DOUDOT=46
    COLON=47
    SEMI=48
    LSB=49
    RSB=50
    LB=51
    RB=52
    LP=53
    RP=54
    INTLIT=55
    REALLIT=56
    BOOLLIT=57
    WS=58
    ERROR_CHAR=59
    STRINGLIT=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardecContext)
            else:
                return self.getTypedRuleContext(MPParser.VardecContext,i)


        def funcdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.FuncdecContext)
            else:
                return self.getTypedRuleContext(MPParser.FuncdecContext,i)


        def procdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ProcdecContext)
            else:
                return self.getTypedRuleContext(MPParser.ProcdecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 90
                    self.vardec()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 91
                    self.funcdec()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 92
                    self.procdec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 97
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def varlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarlistContext)
            else:
                return self.getTypedRuleContext(MPParser.VarlistContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MPParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MPParser.VAR)
            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                self.varlist()
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = MPParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MPParser.ID)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 106
                self.match(MPParser.COMMA)
                self.state = 107
                self.match(MPParser.ID)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(MPParser.COLON)
            self.state = 114
            self.vartype()
            self.state = 115
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartypebasic(self):
            return self.getTypedRuleContext(MPParser.VartypebasicContext,0)


        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def paramarr(self):
            return self.getTypedRuleContext(MPParser.ParamarrContext,0)


        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MPParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vartype)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.BOOLEAN, MPParser.REAL, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.vartypebasic()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(MPParser.ARRAY)
                self.state = 119
                self.paramarr()
                self.state = 120
                self.match(MPParser.OF)
                self.state = 121
                self.vartypebasic()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamarrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def DOUDOT(self):
            return self.getToken(MPParser.DOUDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramarr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamarr" ):
                return visitor.visitParamarr(self)
            else:
                return visitor.visitChildren(self)




    def paramarr(self):

        localctx = MPParser.ParamarrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramarr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MPParser.LSB)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 126
                self.match(MPParser.SUBOP)


            self.state = 129
            self.match(MPParser.INTLIT)
            self.state = 131
            self.match(MPParser.DOUDOT)

            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 132
                self.match(MPParser.SUBOP)


            self.state = 135
            self.match(MPParser.INTLIT)
            self.state = 137
            self.match(MPParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypebasicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vartypebasic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartypebasic" ):
                return visitor.visitVartypebasic(self)
            else:
                return visitor.visitChildren(self)




    def vartypebasic(self):

        localctx = MPParser.VartypebasicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vartypebasic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BOOLEAN) | (1 << MPParser.REAL) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returntype(self):
            return self.getTypedRuleContext(MPParser.ReturntypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(MPParser.ParamlistContext,0)


        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardecContext)
            else:
                return self.getTypedRuleContext(MPParser.VardecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MPParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MPParser.FUNCTION)
            self.state = 142
            self.match(MPParser.ID)
            self.state = 143
            self.match(MPParser.LB)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 144
                self.paramlist()


            self.state = 147
            self.match(MPParser.RB)
            self.state = 148
            self.match(MPParser.COLON)
            self.state = 149
            self.returntype()
            self.state = 150
            self.match(MPParser.SEMI)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.VAR:
                self.state = 151
                self.vardec()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.compoundstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramsingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamsingleContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamsingleContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MPParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 160 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 159
                        self.paramsingle()
                        self.state = 162 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MPParser.ID):
                            break

                    self.state = 164
                    self.match(MPParser.SEMI) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 171
            self.paramsingle()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsingleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramsingle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamsingle" ):
                return visitor.visitParamsingle(self)
            else:
                return visitor.visitChildren(self)




    def paramsingle(self):

        localctx = MPParser.ParamsingleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramsingle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(MPParser.ID)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 174
                self.match(MPParser.COMMA)
                self.state = 175
                self.match(MPParser.ID)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(MPParser.COLON)
            self.state = 182
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturntypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_returntype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturntype" ):
                return visitor.visitReturntype(self)
            else:
                return visitor.visitChildren(self)




    def returntype(self):

        localctx = MPParser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_returntype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matchstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.MatchstmtContext)
            else:
                return self.getTypedRuleContext(MPParser.MatchstmtContext,i)


        def unmatchstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.UnmatchstmtContext)
            else:
                return self.getTypedRuleContext(MPParser.UnmatchstmtContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MPParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 188
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        self.state = 186
                        self.matchstmt()
                        pass

                    elif la_ == 2:
                        self.state = 187
                        self.unmatchstmt()
                        pass

             
                self.state = 192
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsingleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matchstmt(self):
            return self.getTypedRuleContext(MPParser.MatchstmtContext,0)


        def unmatchstmt(self):
            return self.getTypedRuleContext(MPParser.UnmatchstmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_stmtsingle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtsingle" ):
                return visitor.visitStmtsingle(self)
            else:
                return visitor.visitChildren(self)



